--- a/style.css
+++ b/style.css
@@ -2,3 +2,27 @@ html,
 body {
   background-color: antiquewhite;
 }
+
+.header {
+  background-image: url(img/bgk-header.png);
+  background-size: 100% 100%;
+  height: 670px;
+}
+
+.footer {
+  background-image: url(img/bgk-footer.png);
+  background-size: 100% 100%;
+  height: 400px;
+}
+
+.watchOurStory {
+  background-image: url(img/bgk-middle.png);
+  background-size: 100% 100%;
+  height: 550px;
+}
+
+.team {
+  background-image: url(img/bgk-middle-2.png);
+  background-size: 100% 100%;
+  height: 710px;
+}
